--- a/ML07.ipynb
+++ b/ML07.ipynb
@@ -40,7 +40,7 @@
         "from scipy.stats import randint\n",
         "\n",
         "# Load your dataset\n",
-        "df = pd.read_csv(\"your_dataset.csv\")  # Update with your actual file path\n",
+        "df = pd.read_excel(\"/training_mathbert.xlsx\")  # Update with your actual file path\n",
         "\n",
         "# Split into features and target variable\n",
         "X = df.drop(columns=['output'])  # Features (embeddings)\n",
