--- a/ML07.ipynb
+++ b/ML07.ipynb
@@ -57,120 +57,99 @@
       ],
       "source": [
         "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import scipy.cluster.hierarchy as sch\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.model_selection import RandomizedSearchCV\n",
+        "from sklearn.cluster import AgglomerativeClustering, DBSCAN\n",
+        "from sklearn.metrics import silhouette_score, davies_bouldin_score, calinski_harabasz_score\n",
         "from scipy.stats import randint\n",
-        "import scipy.cluster.hierarchy as sch\n",
-        "import matplotlib.pyplot as plt\n",
-        "from sklearn.cluster import AgglomerativeClustering\n",
         "\n",
-        "# Load your dataset\n",
-        "df = pd.read_excel(\"/training_mathbert.xlsx\")  # Update with your actual file path\n",
+        "def load_dataset(filepath):\n",
+        "    \"\"\"Loads the dataset from an Excel file.\"\"\"\n",
+        "    df = pd.read_excel(filepath)\n",
+        "    X = df.drop(columns=['output'])  # Features (embeddings)\n",
+        "    y = df['output']  # Target variable\n",
+        "    return df, X, y\n",
         "\n",
-        "# Split into features and target variable\n",
-        "X = df.drop(columns=['output'])  # Features (embeddings)\n",
-        "y = df['output']  # Target variable (correctness score)\n",
+        "def tune_random_forest(X, y):\n",
+        "    \"\"\"Tunes hyperparameters for Random Forest using RandomizedSearchCV.\"\"\"\n",
+        "    param_dist = {\n",
+        "        'n_estimators': randint(50, 300),\n",
+        "        'max_depth': [None] + list(range(5, 50, 5)),\n",
+        "        'min_samples_split': randint(2, 10),\n",
+        "        'min_samples_leaf': randint(1, 10),\n",
+        "        'max_features': ['sqrt', 'log2', None]  # Removed 'auto'\n",
+        "    }\n",
         "\n",
-        "# Define hyperparameter search space (FIXED max_features)\n",
-        "param_dist = {\n",
-        "    'n_estimators': randint(50, 300),  # Number of trees\n",
-        "    'max_depth': [None] + list(range(5, 50, 5)),  # Tree depth\n",
-        "    'min_samples_split': randint(2, 10),  # Minimum samples required to split a node\n",
-        "    'min_samples_leaf': randint(1, 10),  # Minimum samples per leaf node\n",
-        "    'max_features': ['sqrt', 'log2', None]  # Removed 'auto'\n",
-        "}\n",
+        "    rf = RandomForestRegressor(random_state=42)\n",
+        "    random_search = RandomizedSearchCV(\n",
+        "        rf, param_distributions=param_dist, n_iter=20, cv=5,\n",
+        "        scoring='neg_mean_squared_error', n_jobs=-1, random_state=42\n",
+        "    )\n",
+        "    random_search.fit(X, y)\n",
+        "    return random_search.best_params_\n",
         "\n",
-        "# Define the Random Forest model\n",
-        "rf = RandomForestRegressor(random_state=42)\n",
+        "def plot_dendrogram(X):\n",
+        "    \"\"\"Plots a dendrogram for Agglomerative Clustering.\"\"\"\n",
+        "    plt.figure(figsize=(10, 5))\n",
+        "    sch.dendrogram(sch.linkage(X, method='ward'), truncate_mode='level', p=10)\n",
+        "    plt.title(\"Dendrogram for Hierarchical Clustering\")\n",
+        "    plt.xlabel(\"Data Points\")\n",
+        "    plt.ylabel(\"Distance\")\n",
+        "    plt.show()\n",
         "\n",
-        "# Setup RandomizedSearchCV\n",
-        "random_search = RandomizedSearchCV(\n",
-        "    rf, param_distributions=param_dist,\n",
-        "    n_iter=20, cv=5, scoring='neg_mean_squared_error',\n",
-        "    n_jobs=-1, random_state=42\n",
-        ")\n",
+        "def perform_agglomerative_clustering(X, n_clusters=36):\n",
+        "    \"\"\"Performs Agglomerative Clustering and returns cluster labels.\"\"\"\n",
+        "    agg_clustering = AgglomerativeClustering(n_clusters=n_clusters, linkage='ward')\n",
+        "    return agg_clustering.fit_predict(X)\n",
         "\n",
-        "# Fit the model\n",
-        "random_search.fit(X, y)\n",
+        "def perform_dbscan(X, eps=0.5, min_samples=5):\n",
+        "    \"\"\"Performs DBSCAN clustering and returns cluster labels.\"\"\"\n",
+        "    dbscan = DBSCAN(eps=eps, min_samples=min_samples, metric='euclidean')\n",
+        "    return dbscan.fit_predict(X)\n",
         "\n",
-        "# Print best parameters\n",
-        "print(\"Best Parameters:\", random_search.best_params_)\n",
+        "def evaluate_clustering(X, labels, method_name):\n",
+        "    \"\"\"Evaluates clustering performance using Silhouette, Davies-Bouldin, and Calinski-Harabasz scores.\"\"\"\n",
+        "    if len(set(labels)) > 1:  # Avoid errors if all points are noise or one cluster\n",
+        "        silhouette = silhouette_score(X, labels)\n",
+        "        db_score = davies_bouldin_score(X, labels)\n",
+        "        ch_score = calinski_harabasz_score(X, labels)\n",
+        "        print(f\"Silhouette Score ({method_name}): {silhouette}\")\n",
+        "        print(f\"Davies-Bouldin Score ({method_name}): {db_score}\")\n",
+        "        print(f\"Calinski-Harabasz Score ({method_name}): {ch_score}\")\n",
+        "    else:\n",
+        "        print(f\"{method_name} formed only one cluster or all points are noise.\")\n",
         "\n",
-        "# A5 - Clustering#\n",
         "\n",
-        "# Agglomerative Clustering (Hierarchical)\n",
+        "filepath = \"training_mathbert.xlsx\"  # Update with actual file path\n",
+        "df, X, y = load_dataset(filepath)\n",
         "\n",
-        "# Plot dendrogram\n",
-        "plt.figure(figsize=(10, 5))\n",
-        "sch.dendrogram(sch.linkage(X, method='ward'), truncate_mode='level', p=10)  # Limits depth for clarity\n",
-        "plt.title(\"Dendrogram for Hierarchical Clustering\")\n",
-        "plt.xlabel(\"Data Points\")\n",
-        "plt.ylabel(\"Distance\")\n",
-        "plt.show()\n",
+        "# Random Forest Hyperparameter Tuning\n",
+        "best_params = tune_random_forest(X, y)\n",
+        "print(\"Best Parameters:\", best_params)\n",
         "\n",
-        "# Fit Agglomerative Clustering with chosen n_clusters (adjusted based on dendrogram)\n",
-        "agg_clustering = AgglomerativeClustering(n_clusters=36, linkage='ward')\n",
-        "agg_labels = agg_clustering.fit_predict(X)\n",
-        "\n",
-        "# Add cluster labels to the dataset\n",
+        "# Agglomerative Clustering\n",
+        "plot_dendrogram(X)\n",
+        "agg_labels = perform_agglomerative_clustering(X, n_clusters=36)\n",
         "df['AggloCluster'] = agg_labels\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "from sklearn.cluster import DBSCAN\n",
-        "from sklearn.metrics import silhouette_score\n",
-        "from sklearn.metrics import davies_bouldin_score\n",
-        "from sklearn.metrics import calinski_harabasz_score\n",
-        "\n",
-        "# DBSCAN model\n",
-        "dbscan = DBSCAN(eps=0.5, min_samples=5, metric='euclidean')\n",
-        "\n",
-        "# Fit and predict clusters\n",
-        "dbscan_labels = dbscan.fit_predict(X)\n",
-        "\n",
-        "# Add DBSCAN cluster labels to dataset\n",
+        "# DBSCAN Clustering\n",
+        "dbscan_labels = perform_dbscan(X, eps=0.5, min_samples=5)\n",
         "df['DBSCAN_Cluster'] = dbscan_labels\n",
         "\n",
-        "# Count number of noise points (-1 means noise)\n",
+        "# Count noise points in DBSCAN (-1 means noise)\n",
         "n_noise = np.sum(dbscan_labels == -1)\n",
         "print(f\"Number of Noise Points (DBSCAN): {n_noise}\")\n",
         "\n",
-        "#Evaluating Clustering\n",
-        "\n",
-        "# Silhouette Score for Agglomerative Clustering\n",
-        "agg_silhouette = silhouette_score(X, agg_labels)\n",
-        "print(f\"Silhouette Score (Agglomerative): {agg_silhouette}\")\n",
-        "\n",
-        "# Silhouette Score for DBSCAN (excluding noise points)\n",
-        "dbscan_silhouette = silhouette_score(X[dbscan_labels != -1], dbscan_labels[dbscan_labels != -1])\n",
-        "print(f\"Silhouette Score (DBSCAN, excluding noise): {dbscan_silhouette}\")\n",
-        "\n",
-        "\n",
-        "# Davies-Bouldin Score for Agglomerative Clustering\n",
-        "agg_db_score = davies_bouldin_score(X, agg_labels)\n",
-        "print(f\"Davies-Bouldin Score (Agglomerative): {agg_db_score}\")\n",
-        "\n",
-        "# Davies-Bouldin Score for DBSCAN (excluding noise points)\n",
-        "if len(set(dbscan_labels)) > 1:  # Avoids error if all points are noise\n",
-        "    dbscan_db_score = davies_bouldin_score(X[dbscan_labels != -1], dbscan_labels[dbscan_labels != -1])\n",
-        "    print(f\"Davies-Bouldin Score (DBSCAN): {dbscan_db_score}\")\n",
-        "else:\n",
-        "    print(\"DBSCAN formed only one cluster or all points are noise.\")\n",
-        "\n",
-        "\n",
-        "# Calinski-Harabasz Score for Agglomerative Clustering\n",
-        "agg_ch_score = calinski_harabasz_score(X, agg_labels)\n",
-        "print(f\"Calinski-Harabasz Score (Agglomerative): {agg_ch_score}\")\n",
-        "\n",
-        "# Calinski-Harabasz Score for DBSCAN (excluding noise)\n",
-        "if len(set(dbscan_labels)) > 1:\n",
-        "    dbscan_ch_score = calinski_harabasz_score(X[dbscan_labels != -1], dbscan_labels[dbscan_labels != -1])\n",
-        "    print(f\"Calinski-Harabasz Score (DBSCAN): {dbscan_ch_score}\")\n",
-        "else:\n",
-        "    print(\"DBSCAN formed only one cluster or all points are noise.\")"
+        "# Clustering Evaluations\n",
+        "evaluate_clustering(X, agg_labels, \"Agglomerative\")\n",
+        "evaluate_clustering(X[dbscan_labels != -1], dbscan_labels[dbscan_labels != -1], \"DBSCAN\")"
       ],
       "metadata": {
         "colab": {
